# neo-devpack-rust

./: .gitignore  ARCHITECTURAL_IMPROVEMENTS_131_140.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo-publishing.toml  Cargo.toml  DEEP_ANALYSIS_LOOPS_21_30.md  FIXES_APPLIED.md  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  run_complete_test_suite.sh  run_comprehensive_tests.sh  vercel.json
contracts/constant-product/: Cargo.toml
contracts/constant-product/src/: lib.rs
contracts/crowdfunding/: Cargo.toml
contracts/crowdfunding/src/: lib.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/flashloan-pool/: Cargo.toml
contracts/flashloan-pool/src/: lib.rs
contracts/governance-dao/: Cargo.toml
contracts/governance-dao/src/: config.rs  events.rs  lib.rs  proposals.rs  storage.rs  types.rs  utils.rs  voting.rs
contracts/hello-world/: Cargo.toml  expected.manifest.json  manifest.overlay.json
contracts/hello-world/src/: lib.rs
contracts/move-coin/: Cargo.toml  manifest.overlay.json
contracts/move-coin/src/: lib.rs
contracts/multisig-wallet/: Cargo.toml
contracts/multisig-wallet/src/: config.rs  events.rs  execution.rs  lib.rs  proposals.rs  storage.rs  types.rs  utils.rs
contracts/nep11-nft/: Cargo.toml
contracts/nep11-nft/src/: lib.rs
contracts/nep17-token/: Cargo.toml
contracts/nep17-token/src/: lib.rs
contracts/nft-marketplace/: Cargo.toml
contracts/nft-marketplace/src/: lib.rs
contracts/oracle-consumer/: Cargo.toml
contracts/oracle-consumer/src/: lib.rs
contracts/solana-hello/: Cargo.toml
contracts/solana-hello/src/: lib.rs
contracts/staking-rewards/: Cargo.toml
contracts/staking-rewards/src/: lib.rs
contracts/storage-smoke/: Cargo.toml
contracts/storage-smoke/src/: lib.rs
contracts/timelock-vault/: Cargo.toml
contracts/timelock-vault/src/: lib.rs
contracts/uniswap-v2/: Cargo.toml
contracts/uniswap-v2/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/tests/: neo_express.rs  syscall_parity.rs
move-neovm/: Cargo.toml
move-neovm/benches/: bytecode_translation.rs
move-neovm/src/: bytecode.rs  lib.rs  runtime.rs  translator.rs
move-neovm/src/bytecode/: parser.rs  reader.rs  types.rs  validate.rs
move-neovm/src/translator/: analysis.rs  resources.rs
move-neovm/tests/: bytecode_edge_cases.rs  e2e_tests.rs
rust-devpack/: Cargo.toml  README.md
rust-devpack/examples/: complete_contract.rs  hello_world.rs  simple_contract.rs  storage_contract.rs  token_contract.rs
rust-devpack/neo-macros/: Cargo.toml
rust-devpack/neo-macros/src/: expand.rs  lib.rs  parse.rs
rust-devpack/neo-runtime/: Cargo.toml
rust-devpack/neo-runtime/src/: context.rs  contract.rs  crypto.rs  json.rs  lib.rs  runtime.rs  storage.rs
rust-devpack/neo-syscalls/: Cargo.toml
rust-devpack/neo-syscalls/src/: lib.rs  storage.rs  syscalls.rs  wrapper.rs
rust-devpack/neo-test/: Cargo.toml
rust-devpack/neo-test/src/: assertions.rs  environment.rs  lib.rs  mock_runtime.rs  tests.rs
rust-devpack/neo-types/: Cargo.toml
rust-devpack/neo-types/src/: array.rs  boolean.rs  bytestring.rs  error.rs  hash.rs  integer.rs  iterator.rs  lib.rs  manifest.rs  map.rs  storage.rs  string.rs  traits.rs  value.rs
rust-devpack/src/: codec.rs  lib.rs  native_contracts.rs  standards.rs  storage.rs  utils.rs
rust-devpack/tests/: comprehensive_test_suite.rs  edge_case_tests.rs  integration_tests.rs  manifest_overlay.rs  neo_contract_exports_tests.rs  neo_runtime_tests.rs  neo_syscalls_tests.rs  neo_types_tests.rs  property_based_tests.rs  test_utilities.rs
solana-compat/: Cargo.toml
solana-compat/src/: account_info.rs  entrypoint.rs  lib.rs  program.rs  program_error.rs  pubkey.rs  syscalls.rs
solana-compat/tests/: solana_compat_tests.rs  solana_edge_cases.rs
wasm-neovm/: Cargo.toml  OPTIMIZATIONS_ROUNDS_61_70.md  README.md  build.rs
wasm-neovm/benches/: translation.rs  translation_bench.rs
wasm-neovm/fuzz/: Cargo.toml  README.md
wasm-neovm/fuzz/fuzz_targets/: fuzz_devpack_codec.rs  fuzz_nef.rs  fuzz_numeric.rs  fuzz_rust_contract.rs  fuzz_rust_contract_differential.rs  fuzz_structured_pipeline.rs  fuzz_syscall_surface.rs  fuzz_translate.rs  fuzz_translate_config.rs
wasm-neovm/fuzz/src/: lib.rs
wasm-neovm/src/: cli.rs  lib.rs  logging.rs  main.rs  manifest.rs  manifest_tools.rs  metadata.rs  move_support.rs  nef.rs  neo_syscalls.rs  numeric.rs  opcodes.rs  paths.rs  syscalls.rs
wasm-neovm/src/adapters/: mod.rs  solana.rs
wasm-neovm/src/api/: mod.rs
wasm-neovm/src/config/: mod.rs  options.rs  validation.rs
wasm-neovm/src/core/: bytecode.rs  encoding.rs  mod.rs  traits.rs
wasm-neovm/src/manifest/: build.rs  builder.rs  merge.rs  mod.rs  parity.rs  tests.rs  types.rs
wasm-neovm/src/metadata/: extract.rs  mod.rs  parse.rs  tokens.rs  update.rs
wasm-neovm/src/translator/: arena.rs  constants.rs  frontend.rs  helpers.rs  ir.rs  mod.rs  profiling.rs  runtime.rs  translation.rs  types.rs
wasm-neovm/src/types/: identifiers.rs  mod.rs  primitives.rs
wasm-neovm/tests/: README.md  arithmetic_tests.rs  basic.rs  comparison_tests.rs  config_validation_tests.rs  control_flow_tests.rs  coverage_analysis.rs  cross_chain_tests.rs  doc_tests.rs  edge_case_tests.rs  error_handling_tests.rs  example_contract_manifests.rs  function_call_tests.rs  fuzz_targets.rs  integration_tests.rs  integration_tests_advanced.rs  manifest_coverage.rs  manifest_merge_tests.rs  manifest_parity.rs  memory_operation_tests.rs  memory_tests.rs  nef_format_tests.rs  nef_size_analysis.rs  neo_n3_direct_syscall_coverage.rs  on_nep17_adapter.rs  opcode_consistency.rs  optimization_tests.rs  property_based_tests.rs  runtime_init_tests.rs  solana_move_integration.rs  stack_tests.rs  syscall_consistency.rs  syscall_reference_vectors.rs  syscall_tests.rs  table_tests.rs  test_quality_improvements.rs  test_utilities.rs
wasm-neovm/tests/basic/: arithmetic.rs  calls.rs  common.rs  control_flow.rs  locals.rs  manifest.rs  misc.rs  nef.rs  runtime.rs  select_ref.rs  start.rs  tables.rs  tokens.rs
(+288 files in other folders)
