[package]
name = "integration-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "End-to-end integration tests for Neo LLVM"
rust-version.workspace = true

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = "0.4"
