[package]
name = "move-neovm"
version = "0.1.0"
edition = "2021"
description = "Move bytecode to NeoVM translator (experimental)"
license = "MIT"
authors = ["Neo LLVM Team"]

[dependencies]
anyhow = "1.0"
bytes = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
leb128 = "0.2"  # For ULEB128 decoding used in Move bytecode

[dev-dependencies]
