[package]
name = "move-neovm"
version = "0.1.0"
edition = "2021"
description = "Move bytecode to NeoVM translator (experimental)"
license = "MIT"
repository = "https://github.com/r3e-network/neo-llvm"
homepage = "https://github.com/r3e-network/neo-llvm"
authors = ["Neo LLVM Team"]

[dependencies]
anyhow = "1.0"
bytes = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
leb128 = "0.2"  # For ULEB128 decoding used in Move bytecode
wasm-encoder = "0.239"

[dev-dependencies]
wasmparser = "0.239"
criterion = "0.5"

[[bench]]
name = "bytecode_translation"
harness = false
