[package]
name = "move-neovm"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Move bytecode to NeoVM translator (experimental)"
rust-version.workspace = true
keywords = ["neo", "neovm", "move", "blockchain", "smart-contracts", "bytecode"]
categories = ["cryptography::cryptocurrencies", "development-tools"]
include = ["src/**/*", "Cargo.toml", "README.md", "../LICENSE"]

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
leb128 = "0.2"
wasm-encoder = { workspace = true }

[dev-dependencies]
wasmparser = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "bytecode_translation"
harness = false

[features]
default = []
