[package]
name = "neo-devpack"
version = "0.1.0"
edition = "2021"
authors = ["Neo N3 DevPack Team"]
description = "Neo N3 Rust Development Pack for Smart Contract Development"
license = "MIT"
repository = "https://github.com/r3e-network/neo-llvm"
homepage = "https://github.com/r3e-network/neo-llvm"
documentation = "https://docs.rs/neo-devpack"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
bincode = "3.0"

# Neo N3 specific dependencies
neo-types = { path = "neo-types", version = "0.1.0" }
neo-syscalls = { path = "neo-syscalls", version = "0.1.0" }
neo-runtime = { path = "neo-runtime", version = "0.1.0" }
neo-macros = { path = "neo-macros", version = "0.1.0" }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["std"]
std = []

[lib]
name = "neo_devpack"
path = "src/lib.rs"
