[package]
name = "neo-devpack"
version = "0.1.0"
edition.workspace = true
authors = ["Neo N3 DevPack Team"]
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/neo-devpack"
description = "Neo N3 Rust Development Pack for Smart Contract Development"
rust-version.workspace = true
keywords = ["neo", "neovm", "blockchain", "smart-contracts", "sdk"]
categories = ["cryptography::cryptocurrencies", "development-tools::ffi"]
include = ["src/**/*", "Cargo.toml", "../LICENSE"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bincode = "1.3"

neo-types = { workspace = true }
neo-syscalls = { workspace = true }
neo-runtime = { workspace = true }
neo-macros = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["std"]
std = []

[lib]
name = "neo_devpack"
path = "src/lib.rs"
