[package]
name = "neo-devpack"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/neo-devpack"
description = "Neo N3 Rust Development Pack for Smart Contract Development"
rust-version.workspace = true
keywords = ["neo", "neovm", "blockchain", "smart-contracts", "sdk"]
categories = ["cryptography::cryptocurrencies", "development-tools::ffi"]
include = ["src/**/*", "tests/**/*", "examples/**/*", "README.md", "Cargo.toml", "../LICENSE"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
postcard = { version = "1.1", default-features = false, features = ["use-std"] }

neo-types = { workspace = true }
neo-syscalls = { workspace = true }
neo-runtime = { workspace = true }
neo-macros = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["std"]
std = []

[lib]
name = "neo_devpack"
path = "src/lib.rs"
