[package]
name = "neo-solana-compat"
version = "0.1.0"
edition = "2021"
description = "Solana program compatibility layer for Neo VM"
license = "MIT"
repository = "https://github.com/r3e-network/neo-llvm"
homepage = "https://github.com/r3e-network/neo-llvm"
authors = ["Neo LLVM Team"]

[features]
default = []
no-entrypoint = []

[dependencies]
tiny-keccak = { version = "2", default-features = false, features = ["keccak"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# No external deps for wasm - we provide everything

[dev-dependencies]
