[package]
name = "neo-solana-compat"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Solana program compatibility layer for Neo VM"
rust-version.workspace = true

[features]
default = []
no-entrypoint = []

[dependencies]
tiny-keccak = { version = "2", default-features = false, features = ["keccak"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# No external deps for wasm - we provide everything

[dev-dependencies]
