[package]
name = "wasm-neovm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly to NeoVM translator"
rust-version.workspace = true
readme = "../README.md"
keywords = ["neo", "neovm", "wasm", "webassembly", "blockchain", "smart-contracts"]
categories = ["wasm", "cryptography::cryptocurrencies", "development-tools"]
include = ["src/**/*", "Cargo.toml", "build.rs", "README.md", "../LICENSE"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wasmparser = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
diff = { workspace = true }
move-neovm = { workspace = true }
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }

[dev-dependencies]
assert_cmd = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
wat = { workspace = true }
wasm-encoder = { workspace = true }
criterion = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }

[[bench]]
name = "translation"
harness = false

[features]
default = []
# Enable profiling instrumentation for performance analysis
profile = []
