[package]
name = "wasm-neovm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly to NeoVM translator"
rust-version.workspace = true
readme = "../README.md"
keywords = ["neo", "neovm", "wasm", "blockchain", "smart-contracts"]
categories = ["wasm", "cryptography::cryptocurrencies", "development-tools"]
include = ["src/**/*", "Cargo.toml", "build.rs", "README.md", "../LICENSE"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wasmparser = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
diff = { workspace = true }
move-neovm = { workspace = true }
log = { version = "0.4", features = ["std", "serde"], optional = true }
env_logger = { version = "0.11", default-features = false, features = ["auto-color"], optional = true }
rustc_version_runtime = "0.3"

[dev-dependencies]
assert_cmd = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
wat = { workspace = true }
wasm-encoder = { workspace = true }
criterion = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }

[[bench]]
name = "translation"
harness = false

[features]
default = ["std", "logging"]
# Standard library support
std = []
# Enable logging support
logging = ["log", "env_logger"]
# Enable all optional features
full = ["logging", "profiling", "pgo", "validation"]
# Enable profiling instrumentation for performance analysis (Round 70)
profiling = []
# Enable Profile-Guided Optimization instrumentation (Round 90)
pgo = ["profiling"]
# Enable extra validation checks
validation = []
# Enable experimental features
experimental = []
# Alias for profiling (backward compatibility)
profile = ["profiling"]
