[package]
name = "constant-product-neo"
version = "0.2.0"
edition = "2021"
description = "Neo N3 constant product AMM (Automated Market Maker) smart contract with swap fees and liquidity management"
keywords = ["neo", "n3", "smart-contract"]
license = "MIT"
repository = "https://github.com/r3e-network/neo-llvm"
homepage = "https://github.com/r3e-network/neo-llvm"
categories = ["cryptography::cryptocurrencies", "wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neo-devpack = "0.1"
[workspace]
