[package]
name = "governance-dao-neo"
version = "0.2.0"
edition = "2021"
description = "Neo N3 DAO governance smart contract with stake-weighted voting and proposal execution"
keywords = ["neo", "n3", "smart-contract"]
license = "MIT"
repository = "https://github.com/r3e-network/neo-llvm"
homepage = "https://github.com/r3e-network/neo-llvm"
categories = ["cryptography::cryptocurrencies", "wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neo-devpack = "0.1"
serde = { version = "1.0", features = ["derive"] }
[workspace]
