[package]
name = "governance-dao-neo"
version = "0.2.0"
edition = "2021"
description = "Neo N3 DAO governance smart contract with stake-weighted voting and proposal execution"
keywords = ["neo", "n3", "smart-contract"]
license = "MIT"
repository = "https://github.com/r3e-network/neo-devpack-rust"
homepage = "https://github.com/r3e-network/neo-devpack-rust"
categories = ["cryptography::cryptocurrencies", "wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neo-devpack = { path = "../../rust-devpack", default-features = false }
[workspace]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
