[package]
name = "hello-world"
version = "0.2.0"
edition = "2021"
description = "Minimal Neo N3 smart contract example demonstrating basic contract structure"
license = "MIT"
repository = "https://github.com/r3e-network/neo-llvm"
homepage = "https://github.com/r3e-network/neo-llvm"
keywords = ["neo", "n3", "hello-world", "smart-contract"]
categories = ["cryptography::cryptocurrencies", "wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neo-devpack = { path = "../../rust-devpack" }
