[package]
name = "hello-world-neo"
version = "0.2.0"
edition = "2021"
description = "Minimal Neo N3 smart contract example demonstrating basic contract structure"
keywords = ["neo", "n3", "smart-contract"]
license = "MIT"
repository = "https://github.com/r3e-network/neo-llvm"
homepage = "https://github.com/r3e-network/neo-llvm"
categories = ["cryptography::cryptocurrencies", "wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neo-devpack = { path = "../../rust-devpack", default-features = false }
[workspace]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
