[package]
name = "move-coin"
version = "0.2.0"
edition = "2021"
description = "Example Move-style coin contract compiled for NeoVM"
license = "MIT"
repository = "https://github.com/r3e-network/neo-llvm"
homepage = "https://github.com/r3e-network/neo-llvm"

[lib]
crate-type = ["cdylib"]

[dependencies]

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
