[package]
name = "move-coin-neo"
version = "0.2.0"
edition = "2021"
description = "Example Move-style coin contract compiled for NeoVM with resource semantics"
license = "MIT"
repository = "https://github.com/r3e-network/neo-llvm"
homepage = "https://github.com/r3e-network/neo-llvm"
keywords = ["neo", "n3", "move", "coin", "resource", "smart-contract"]
categories = ["cryptography::cryptocurrencies", "wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
