[package]
name = "multisig-wallet-neo"
version = "0.2.0"
edition = "2021"
description = "Neo N3 multisig wallet smart contract with configurable owners and threshold"
license = "MIT"
repository = "https://github.com/r3e-network/neo-llvm"
homepage = "https://github.com/r3e-network/neo-llvm"
keywords = ["neo", "n3", "multisig", "wallet", "smart-contract"]
categories = ["cryptography::cryptocurrencies", "wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neo-devpack = "0.1"
