[package]
name = "nep11-nft-neo"
version = "0.2.0"
edition = "2021"
description = "Neo N3 NEP-11 compliant non-fungible token (NFT) smart contract with minting and transfers"
license = "MIT"
repository = "https://github.com/r3e-network/neo-llvm"
homepage = "https://github.com/r3e-network/neo-llvm"
keywords = ["neo", "n3", "nep-11", "nft", "non-fungible", "smart-contract"]
categories = ["cryptography::cryptocurrencies", "wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neo-devpack = "0.1"
