[package]
name = "oracle-consumer"
version = "0.2.0"
edition = "2021"
description = "Neo N3 Oracle consumer smart contract for requesting and receiving off-chain data"
license = "MIT"
repository = "https://github.com/r3e-network/neo-llvm"
homepage = "https://github.com/r3e-network/neo-llvm"
keywords = ["neo", "n3", "oracle", "data-feed", "smart-contract"]
categories = ["cryptography::cryptocurrencies", "wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neo-devpack = "0.1"
serde = { version = "1.0", features = ["derive"] }
