[package]
name = "solana-hello"
version = "0.1.0"
edition = "2021"
description = "Example Solana-style contract compiled for NeoVM"
license = "MIT"
repository = "https://github.com/r3e-network/neo-llvm"
homepage = "https://github.com/r3e-network/neo-llvm"

[lib]
crate-type = ["cdylib"]

[dependencies]
neo-solana-compat = { path = "../../solana-compat" }

[features]
# Matches Solana's conventional feature used by `entrypoint!` macros to opt out
# of exporting the on-chain entrypoint in unit tests and host tooling.
no-entrypoint = []

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
