[package]
name = "solana-hello-neo"
version = "0.2.0"
edition = "2021"
description = "Example Solana-style contract compiled for NeoVM with solana-program compatibility"
keywords = ["neo", "n3", "smart-contract"]
license = "MIT"
repository = "https://github.com/r3e-network/neo-llvm"
homepage = "https://github.com/r3e-network/neo-llvm"
categories = ["cryptography::cryptocurrencies", "wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neo-solana-compat = { path = "../../solana-compat" }

[features]
# Matches Solana's conventional feature used by `entrypoint!` macros to opt out
# of exporting the on-chain entrypoint in unit tests and host tooling.
no-entrypoint = []

[profile.release]
lto = true
opt-level = "z"
panic = "abort"

[profile.dev]
panic = "abort"

[workspace]
