[package]
name = "neo-macros"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros for Neo N3 contracts"
documentation = "https://docs.rs/neo-macros"
rust-version.workspace = true
keywords = ["neo", "neovm", "blockchain", "smart-contracts", "macros"]
categories = ["cryptography::cryptocurrencies", "development-tools::procedural-macro-helpers"]
include = ["src/**/*", "Cargo.toml", "README.md", "../../LICENSE"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
neo-types = { workspace = true }
neo-syscalls = { workspace = true }
neo-runtime = { workspace = true }

[features]
default = []
