[package]
name = "neo-runtime"
version = "0.1.0"
edition.workspace = true
authors = ["Neo N3 DevPack Team"]
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Neo N3 Runtime Stubs"
rust-version.workspace = true
keywords = ["neo", "neovm", "blockchain", "smart-contracts", "runtime"]
categories = ["cryptography::cryptocurrencies", "no-std"]
include = ["src/**/*", "Cargo.toml", "README.md", "../../LICENSE"]

[dependencies]
neo-types = { workspace = true }
neo-syscalls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
num-bigint = { version = "0.4", features = ["std"] }

[features]
default = []
