[package]
name = "neo-syscalls"
version = "0.1.0"
edition.workspace = true
authors = ["Neo N3 DevPack Team"]
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Neo N3 Syscall Definitions"
rust-version.workspace = true

[dependencies]
neo-types = { workspace = true }
once_cell = { workspace = true }

[features]
default = []
